dataset1235/2025-2/610742602/users/603578795/executions/2563853024_1026882843.log
== RUN (2025-09-02 20:30:01)
-- CODE: 
import math pi=math.pi
math= pi
raio = float(input("Insira o raio:"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import math pi=math.pi
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:29:05)
-- CODE: 
import math
math= pi
raio = float(input("Insira o raio:"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math= pi
          ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:31:37)
-- CODE: 
import math 
pi = math.pi


raio = float(input("Insira o raio:"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
Insira o raio:0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
Insira o raio:32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
Insira o raio:38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
Insira o raio:452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
Insira o raio:221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
Insira o raio:346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:28:51)
-- CODE: 
import.math
math= pi
raio = float(input("Insira o raio:"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:30:21)
-- CODE: 
import math 
pi = math.pi


raio = float(input("Insira o raio:"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
Insira o raio:0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
Insira o raio:32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
Insira o raio:38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
Insira o raio:452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
Insira o raio:221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
Insira o raio:346.3606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
